Added Makefile,Dockerfile and Restructuring
