# pkg/userData/handlers/deleteUser.go
@@ -1,8 +1,8 @@
 package handlers
 
 import (
-	Model "example/userProject/pkg/userData/Models"
-	"example/userProject/pkg/userData/services"
+	Model "example/userproject/pkg/userData/Models"
+	"example/userproject/pkg/userData/services"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -16,7 +16,7 @@ import (
 // @Produce      json
 // @Param id path string true "User ID"
 // @Success      200 {string} string "Deleted User Successfully"
-// @Router       /api/v1/users/:id [delete]
+// @Router       /api/v1/user/{id} [delete]
 func DeleteUser(req *gin.Context) {
 	var user Model.User
 
